# klustershield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY_REPORT.md  SECURITY_REPORT_V2.md  SECURITY_REPORT_V3.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
docs/: nist-control-mapping.md  proxmox-setup.md
klustershield/: __init__.py  cli.py
klustershield/provisioner/: __init__.py  namespace.py
klustershield/scanner/: __init__.py  engine.py
manifests/gatekeeper/: no-privileged-containers.yaml
manifests/network-policies/: default-deny-all.yaml
scripts/: provision_cluster.py
tests/: test_scanner_smoke.py
