[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "klustershield"
version = "0.1.0"
description = "Security-hardened Kubernetes compliance automation aligned to NIST SP 800-218"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rudy Martinez", email = "rudy.mtz@proton.me" }]
requires-python = ">=3.11"
keywords = ["kubernetes", "nist", "compliance", "security", "devsecops", "ssdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
klustershield = "klustershield.cli:main"

[project.urls]
Homepage = "https://github.com/rudymartinezai/klustershield"
Documentation = "https://github.com/rudymartinezai/klustershield/blob/main/docs"
Issues = "https://github.com/rudymartinezai/klustershield/issues"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
